--- a/package.json
+++ b/package.json
@@ -3,19 +3,85 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.10.16",
+    "@react-oauth/google": "^0.5.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@sanity/client": "^3.4.1",
+    "@stripe/react-stripe-js": "^1.16.1",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.12",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.26",
+    "antd": "^5.0.4",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
+    "daisyui": "^2.42.0",
+    "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
+    "enzyme": "^3.11.0",
+    "eslint": "^8.29.0",
+    "firebase": "^9.14.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
+    "formik": "^2.2.9",
+    "gapi-script": "^1.2.0",
+    "json-server": "^0.17.1",
+    "node-sass": "^8.0.0",
+    "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-i18next": "^12.0.0",
+    "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-thunk": "^1.0.0",
+    "recharts": "^2.1.16",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.7",
+    "sass": "^1.56.2",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "styled-components": "^5.3.6",
+    "tsconfig": "^7.0.0",
+    "typed-redux-saga": "^1.5.0",
+    "typescript": "^4.9.3",
+    "uuidv4": "^6.2.13",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4",
+    "zustand": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +100,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
