--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.56.2",
